plugins {
    id 'java'
}

group 'io.github.maniero'
version '1.0-SNAPSHOT'

sourceCompatibility = 14

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
    testImplementation("org.assertj:assertj-core:3.11.1")
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}
